<resources>
    <string name="app_name">Survey Collection</string>

    <string name="activity_login">Login</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_survey">Surveys</string>
    <string name="title_activity_add_user">Add New User</string>
    <string name="title_activity_add_survey">Add New Survey</string>
    <string name="title_activity_add_question">Add New Question</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_new_survey">NewSurveyActivity</string>

    <string name="title_activity_send">Send</string>
    <string name="title_activity_receive">Receive</string>


    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="supervisor">Supervisor</string>
    <string name="user">User</string>
    <string name="import_export">Import/Export Data</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="users">Users</string>
    <string name="survey">Surveys</string>
    <string name="patients">Patients</string>
    <string name="collectedData">Collected Data</string>
    <string name="welcome">Welcome</string>
    <string name="new_survey">New Survey</string>
    <string name="survey_history">Survey History</string>
    <string name="supervisor_login">Supervisor Login</string>

    <string name="discard">Discard</string>
    <string name="sure_cancel">Are you sure you want to cancel the filled form?</string>

    <string name="logout">Logout</string>
    <string name="sure_logout">Do you want to logout?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="save">Save</string>

    <string name="language">Language</string>
    <string name="setting">Setting</string>

    <string-array name="lang_list_item_array">
        <item>Marathi</item>
        <item>English</item>
    </string-array>


</resources>
