<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ak.search.fragment.AdminFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:weightSum="4">



            <android.support.v7.widget.CardView
                android:id="@+id/btn_user"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onBtnClick"
                app:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"

                        android:layout_margin="10dp"
                        android:src="@drawable/team" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:gravity="left"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/users"
                            android:layout_centerInParent="true"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/counter_survey_background" />

                            <TextView
                                android:id="@+id/tv_user_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:text="0"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>


                    </RelativeLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/btn_survey"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onBtnClick"
                app:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:src="@drawable/survey" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/survey"
                            android:layout_centerInParent="true"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/counter_survey_background" />

                            <TextView
                                android:id="@+id/tv_survey_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="0"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>


                    </RelativeLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:id="@+id/btn_patients"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onBtnClick"
                app:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:src="@drawable/search" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/patients"
                            android:layout_centerInParent="true"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/counter_survey_background" />

                            <TextView
                                android:id="@+id/tv_patient_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="0"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>


                    </RelativeLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/btn_data"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onBtnClick"
                app:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:src="@drawable/doc" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/collectedData"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="20sp"
                            android:layout_centerInParent="true"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true">


                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="40dp"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:src="@drawable/counter_survey_background" />

                            <TextView
                                android:id="@+id/tv_collected_data_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:text="0"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>


                    </RelativeLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>


</FrameLayout>
